--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <title>Bratya Azanza | Home</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body style="text-align: center;">
 
-    <section class="Intro">
+  <section class="CoverIntro">
+    <article class="CoverIntro-content">
+    	<header class="Header">
+        <figure>
+          <img src="./assets/images/logo.svg" alt="">
+        </figure>
+    		<h1 class="Header-title u-textWhite"><span>Bratya</span><p>Azanza</p></h1>
+    	</header>
+    </article>
+  </section>
 
-    </section>
+  <section class="Info">
+
+  </section>
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="./assets/js/min/animation.js?v=0.00001" ></script>
+  <script src="./assets/js/min/app.js?v=0.001"></script>
+
 </body>
 </html>
